--- a/src/AllergySite.csproj
+++ b/src/AllergySite.csproj
@@ -1,5 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-<Import xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk.Web" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
